--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,50 @@
 // @import 'yoga';
 // @import 'normalize';
 
-// $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
-// @import 'font-awesome';
+$fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
+@import 'font-awesome';
 @import 'box-sizing';
+
+$c-background: #a7d076;
+
+.user-card {
+  max-width: 30rem;
+  padding: 1rem 1rem 0;
+  // box-shadow: 0.2rem 0.2rem 0.4rem rgba(#000, 0.4);
+
+  &__top {
+    position: relative;
+    margin: -1rem -1rem 0;
+    padding: 5rem;
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
+    background: $c-background;
+  }
+
+  &__top-icon {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    margin: 0;
+  }
+
+  &__top-pic {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 8rem;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+  }
+
+  &__bottom {
+    > * + * {
+      border-top: thin rgba(#000, 0.2) solid;
+    }
+  }
+
+  &__info {
+    padding: 1rem 0;
+    vertical-align: middle;
+  }
+}
