--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,14 +7,21 @@ $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 
 $c-background: #a7d076;
 
+.section {
+  padding: 1rem;
+}
+
+.container {
+  max-width: 65rem;
+  margin: auto;
+}
+
 .user-card {
   max-width: 30rem;
-  padding: 1rem 1rem 0;
   // box-shadow: 0.2rem 0.2rem 0.4rem rgba(#000, 0.4);
 
   &__top {
     position: relative;
-    margin: -1rem -1rem 0;
     padding: 5rem;
     border-top-left-radius: 0.3rem;
     border-top-right-radius: 0.3rem;
@@ -44,7 +51,7 @@ $c-background: #a7d076;
   }
 
   &__info {
-    padding: 1rem 0;
+    padding: 1rem;
     vertical-align: middle;
   }
 }
