--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,7 +18,7 @@ $c-background: #a7d076;
 
 .user-card {
   max-width: 30rem;
-  // box-shadow: 0.2rem 0.2rem 0.4rem rgba(#000, 0.4);
+  box-shadow: 0.2rem 0.2rem 0.4rem rgba(#000, 0.4);
 
   &__top {
     position: relative;
@@ -53,5 +53,9 @@ $c-background: #a7d076;
   &__info {
     padding: 1rem;
     vertical-align: middle;
+  }
+
+  &__info-text {
+    margin-left: 1rem;
   }
 }
